--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,8 @@
     "imagekit": "^6.0.0",
     "imagekitio-react": "^4.3.0",
     "lucide-react": "^0.544.0",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hot-toast": "^2.6.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-quill-new": "^3.6.0",
